@@ -21,6 +21,8 @@ DUMB: support tex fonts
 
 TODO: exg-- patch
 TODO: selection_beg/end should set screen, or so
+	- enable --mlock option for urxvt with frills on
+          systems supporting it (patch by Russell Harmon).
 	- urxvt did not compile without frills enabled
           (analysed by Matthew Rosewarne).
 
